--- a/src/AutoSetup.IntegrationTests/AutoSetup.IntegrationTests.csproj
+++ b/src/AutoSetup.IntegrationTests/AutoSetup.IntegrationTests.csproj
@@ -279,6 +279,9 @@
   <ItemGroup>
     <EmbeddedResource Include="files\FieldNameGenerator_MultipleParameters.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="DocumentBuilderTests\files\TestClassWithEverything.txt" />
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
