--- a/src/AutoSetup.UnitTests/AutoSetup.UnitTests.csproj
+++ b/src/AutoSetup.UnitTests/AutoSetup.UnitTests.csproj
@@ -274,6 +274,18 @@
   <ItemGroup>
     <EmbeddedResource Include="files\FieldNameGenerator_MultipleParameters.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="CodeAnalyzers\files\Class_WithSampleMethodWithLines.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="CodeAnalyzers\files\Class_WithPublicSampleField.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="CodeAnalyzers\files\Class_WithNotReadonlySampleField.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="CodeAnalyzers\files\Class_WithSampleFieldDifferentName.txt" />
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
