--- a/src/AutoSetup/AutoSetup.csproj
+++ b/src/AutoSetup/AutoSetup.csproj
@@ -8,12 +8,13 @@
 
   <PropertyGroup>
     <PackageId>AutoSetup</PackageId>
-    <PackageVersion>1.0.1</PackageVersion>
+    <PackageVersion>1.0.5-alpha-new-icon</PackageVersion>
     <Authors>Tuba Kaya</Authors>
     <Product>AutoSetup</Product>
     <Description>Generates fields and setup method for class under test.</Description>
     <Copyright>Copyright 2018</Copyright>
     <PackageLicenseUrl>https://github.com/tukaya/autosetup/blob/master/LICENSE.txt</PackageLicenseUrl>
+    <PackageIconUrl>https://github.com/tukaya/autosetup/blob/master/icon.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/tukaya/autosetup/</PackageProjectUrl>
     <RepositoryUrl>https://github.com/tukaya/autosetup/</RepositoryUrl>
     <RepositoryType>GitHub</RepositoryType>
