--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,20 +1,27 @@
-next-version: 1.0
-assembly-versioning-scheme: MajorMinorPatch
-assembly-file-versioning-scheme: MajorMinorPatchTag
-assembly-file-versioning-format: '{Major}.{Minor}.{Patch}.{env:APPVEYOR_BUILD_NUMBER ?? fallback_string}'
-assembly-informational-format: '{InformationalVersion}'
+assembly-versioning-scheme: Major
 mode: ContinuousDeployment
-increment: Inherit
-continuous-delivery-fallback-tag: ci
 tag-prefix: '[vV]'
+continuous-delivery-fallback-tag: ''
 major-version-bump-message: '\+semver:\s?(breaking|major)'
 minor-version-bump-message: '\+semver:\s?(feature|minor)'
 patch-version-bump-message: '\+semver:\s?(fix|patch)'
-no-bump-message: '\+semver:\s?(none|skip)'
-legacy-semver-padding: 4
-build-metadata-padding: 4
-commits-since-version-source-padding: 4
+legacy-semver-padding: 3
+build-metadata-padding: 3
+commits-since-version-source-padding: 3
 commit-message-incrementing: Enabled
-commit-date-format: 'yyyy-MM-dd'
+branches:
+  master:
+    mode: ContinuousDeployment
+    tag: ''
+    increment: Minor
+    prevent-increment-of-merged-branch-version: true
+    track-merge-target: false
+  (pull|pull\-requests|pr)[/-]:
+    mode: ContinuousDeployment
+    tag: PullRequest
+    increment: Inherit
+    prevent-increment-of-merged-branch-version: false
+    tag-number-pattern: '[/-](?<number>\d+)[-/]'
+    track-merge-target: false
 ignore:
   sha: []
