🚧 Tries set version with appveyor build number

--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,4 +1,6 @@
-assembly-versioning-scheme: Major
+assembly-versioning-scheme: MajorMinorPatchTag
+assembly-file-versioning-scheme: MajorMinorPatchTag
+assembly-file-versioning-format: '{Major}.{Minor}.{Patch}.{env:APPVEYOR_BUILD_NUMBER ?? fallback_string}'
 mode: ContinuousDeployment
 tag-prefix: '[vV]'
 continuous-delivery-fallback-tag: ''
