--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -38,6 +38,12 @@ stages:
       displayName: 'nuget restore'
       workingDirectory: 'src'
 
+    - script: 'dotnet msbuild src\autosetup.sln -p:Configuration=Release'
+      displayName: 'Build Solution'
+
+    - script: 'dotnet test src\AutoSetup.UnitTests\AutoSetup.UnitTests.csproj'
+      displayName: 'Run unit tests'
+
     - task: DotNetCoreCLI@2
       displayName: 'dotnet pack'
       inputs:
